@@ -1,3 +1,6 @@
+2010-02-24: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/PrivateKey.pm: document the sign_digest() method
+
 2010-01-23: Jason Long <jlong@messiah.edu>
  * t/public_key.t: test that DNS failure reason is given, when
    DNS returns no results
